--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "@radix-ui/react-toast": "^1.2.14",
     "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.76.2",
+    "@wix/data": "^1.0.242",
+    "@wix/sdk": "^1.15.23",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
     "next": "^15.1.8",
     "next-themes": "^0.4.6",
