--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html-react-parser": "^5.2.5",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
     "next": "^15.1.8",
